fix spacing bottom and add text shadow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 /* For testing only */
 
-/**:not(body):not(html) {
+*:not(body):not(html) {
   box-sizing:border-box;
   border:1px dashed #000;
 }
 
 .columns {
   min-height: 100px;
-}*/
+}
 
 /* End for testing */
 
@@ -15,6 +15,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+h2 {
+  padding: 20px;
 }
 
 body {
@@ -75,5 +79,8 @@ body {
 
 .holiday img {
   width: 45vw;
-  background-image: linear-gradient(to bottom right,#002f4b,#dc4225);
+}
+
+.holiday .card-text, .shop .card-text {
+  text-shadow: 0 1px black;
 }
